--- a/xxqr/index.html
+++ b/xxqr/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Supabase Verbindung Test</title>
+    <title>Supabase Verbindung</title>
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <style>
         body { font-family: Arial, sans-serif; text-align: center; padding: 20px; }
@@ -50,10 +50,17 @@
         }
 
         // Test der Verbindung beim Laden der Seite
-        window.onload = testConnection;
+        window.onload = function() {
+            // Setze initiale Nachricht auf "Verbindung wird getestet..."
+            document.getElementById("connectionStatus").innerText = "Verbindung wird getestet...";
+            // Teste die Verbindung
+            testConnection();
+        };
     </script>
 
 </body>
+</html>
+
 </html>
 
 
